week8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: httpserver
